tests/baselines/reference/parseCommaSeparatedNewlineNew.errors.txt
parseCommaSeparatedNewlineNew.ts(1,2): error TS2304: Cannot find name 'a'.
parseCommaSeparatedNewlineNew.ts(1,2): error TS2695: Left side of comma operator is unused and has no side effects.
parseCommaSeparatedNewlineNew.ts(2,4): error TS1109: Expression expected.


==== parseCommaSeparatedNewlineNew.ts (3 errors) ====
    (a,
     ~
!!! error TS2304: Cannot find name 'a'.
     ~
!!! error TS2695: Left side of comma operator is unused and has no side effects.
    new)
       ~
!!! error TS1109: Expression expected.